[package]
name = "nsm-io"
version = "0.2.0"
authors = ["Petre Eftime <epetre@amazon.com>", "Anthony Liguori <aliguori@amazon.com>", "Andrei Trandafir <aatrand@amazon.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = "0.1.0", optional = true }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
log = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11", optional = true }
serde_cbor = { version = "0.11", optional = true }

[features]
default = ["std"]
std = ["serde", "serde_bytes", "serde_cbor"]
rustc-dep-of-std = ["core", "alloc", "compiler_builtins/rustc-dep-of-std", "serde/rustc-dep-of-std"]
