[package]
name = "nsm-io"
version = "0.2.0"
authors = ["Petre Eftime <epetre@amazon.com>", "Anthony Liguori <aliguori@amazon.com>", "Andrei Trandafir <aatrand@amazon.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = "0.1.0", optional = true }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
log = { version = "0.4", optional = true }
# Avoid rust-lang issue #78
# https://github.com/rust-lang/wg-cargo-std-aware/issues/78
serde = { git = "https://github.com/fortanix/serde.git", branch = "raoul/stdlib_1.0.136", default-features = false, features = ["derive"], optional = true }
serde_bytes = { git = "https://github.com/fortanix/bytes.git", branch = "raoul/no_std_compatibility", default-features = false, optional = true }
serde_cbor = { git = "https://github.com/fortanix/cbor.git", branch = "raoul/stdlib_serde_1.0.136", default-features = false, optional = true }

[features]
default = ["std"]
std = ["serde", "serde_bytes", "serde_cbor"]
rustc-dep-of-std = [
	"alloc",
	"compiler_builtins/rustc-dep-of-std",
	"core",
	"serde/rustc-dep-of-std",
	"serde_bytes/rustc-dep-of-std",
	"serde_cbor/rustc-dep-of-std",
	]
